# wasabi

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  README.md  Rakefile  wasabi.gemspec
.github/workflows/: test.yml
ext/: Rakefile  build.rb
ext/wasabi/: Cargo.toml  extconf.rb  wasabi.c  wasabi.h
ext/wasabi/src/: lib.rs
lib/: wasabi.rb
lib/wasabi/: version.rb
spec/: spec_helper.rb  wasabi_object_spec.rb  wasabi_spec.rb
src/: lib.rs
