[package]
name = "wasabi"
version = "0.1.0"
authors = ["sinsoku <sinsoku.listy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ruru = { git = "https://github.com/d-unseductable/ruru" }
ruby-sys = { git = "https://github.com/steveklabnik/ruby-sys" }

[replace]
"ruby-sys:0.3.0" = { git = "https://github.com/steveklabnik/ruby-sys" }
